adding genericty and solving some warnings