@@ -241,7 +241,8 @@ public class ParameterBlock implements Cloneable, Serializable {
      * 
      * @return the parameter classes.
      */
-    public Class[] getParamClasses() {
+    @SuppressWarnings("rawtypes")
+	public Class[] getParamClasses() {
         int count = parameters.size();
         Class paramClasses[] = new Class[count];
 
@@ -299,7 +300,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock set(long l, int index) {
-        return set(new Long(l), index);
+        return set(Long.valueOf(l), index);
     }
 
     /**
@@ -310,7 +311,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock add(long l) {
-        return add(new Long(l));
+        return add(Long.valueOf(l));
     }
 
     /**
@@ -324,7 +325,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock set(int i, int index) {
-        return set(new Integer(i), index);
+        return set(Integer.valueOf(i), index);
     }
 
     /**
@@ -335,7 +336,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock add(int i) {
-        return add(new Integer(i));
+        return add(Integer.valueOf(i));
     }
 
     /**
@@ -349,7 +350,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock set(float f, int index) {
-        return set(new Float(f), index);
+        return set(Float.valueOf(f), index);
     }
 
     /**
@@ -360,7 +361,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock add(float f) {
-        return add(new Float(f));
+        return add(Float.valueOf(f));
     }
 
     /**
@@ -374,7 +375,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock set(double d, int index) {
-        return set(new Double(d), index);
+        return set(Double.valueOf(d), index);
     }
 
     /**
@@ -385,7 +386,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock add(double d) {
-        return add(new Double(d));
+        return add(Double.valueOf(d));
     }
 
     /**
@@ -399,7 +400,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock set(char c, int index) {
-        return set(new Character(c), index);
+        return set(Character.valueOf(c), index);
     }
 
     /**
@@ -410,7 +411,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock add(char c) {
-        return add(new Character(c));
+        return add(Character.valueOf(c));
     }
 
     /**
@@ -424,7 +425,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return this parameter block.
      */
     public ParameterBlock set(byte b, int index) {
-        return set(new Byte(b), index);
+        return set(Byte.valueOf(b), index);
     }
 
     /**
@@ -435,7 +436,7 @@ public class ParameterBlock implements Cloneable, Serializable {
      * @return the parameter block.
      */
     public ParameterBlock add(byte b) {
-        return add(new Byte(b));
+        return add(Byte.valueOf(b));
     }
 
     /**
