@@ -414,22 +414,22 @@ public class PrefuseLib {
         s.addColumn(VisualItem.BOUNDS, Rectangle2D.class, new Rectangle2D.Double());
         
         // color
-        Integer defStroke = new Integer(ColorLib.rgba(0,0,0,0));
+        Integer defStroke = Integer.valueOf(ColorLib.rgba(0,0,0,0));
         s.addInterpolatedColumn(VisualItem.STROKECOLOR, int.class, defStroke);
 
-        Integer defFill = new Integer(ColorLib.rgba(0,0,0,0));
+        Integer defFill = Integer.valueOf(ColorLib.rgba(0,0,0,0));
         s.addInterpolatedColumn(VisualItem.FILLCOLOR, int.class, defFill);
 
-        Integer defTextColor = new Integer(ColorLib.rgba(0,0,0,0));
+        Integer defTextColor = Integer.valueOf(ColorLib.rgba(0,0,0,0));
         s.addInterpolatedColumn(VisualItem.TEXTCOLOR, int.class, defTextColor);
 
         // size
-        s.addInterpolatedColumn(VisualItem.SIZE, double.class, new Double(1));
-        s.addInterpolatedColumn(VisualItem.SIZEY, double.class, new Double(Double.NaN));
+        s.addInterpolatedColumn(VisualItem.SIZE, double.class, Double.valueOf(1));
+        s.addInterpolatedColumn(VisualItem.SIZEY, double.class, Double.valueOf(Double.NaN));
         
         // shape
         s.addColumn(VisualItem.SHAPE, int.class,
-            new Integer(Constants.SHAPE_RECTANGLE));
+            Integer.valueOf(Constants.SHAPE_RECTANGLE));
         
         // stroke
         s.addColumn(VisualItem.STROKE, Stroke.class, new BasicStroke());
@@ -439,7 +439,7 @@ public class PrefuseLib {
         s.addInterpolatedColumn(VisualItem.FONT, Font.class, defFont);
         
         // degree-of-interest
-        s.addColumn(VisualItem.DOI, double.class, new Double(Double.MIN_VALUE));
+        s.addColumn(VisualItem.DOI, double.class, Double.valueOf(Double.MIN_VALUE));
 
         return s;
     }
@@ -478,13 +478,13 @@ public class PrefuseLib {
 
         s.setDefault(VisualItem.STARTVISIBLE, Boolean.FALSE);
         
-        Integer defColor = new Integer(ColorLib.gray(230));
+        Integer defColor = Integer.valueOf(ColorLib.gray(230));
         s.setInterpolatedDefault(VisualItem.STROKECOLOR, defColor);
         
-        defColor = new Integer(ColorLib.gray(150));
+        defColor = Integer.valueOf(ColorLib.gray(150));
         s.setInterpolatedDefault(VisualItem.TEXTCOLOR, defColor);
 
-        Double nan = new Double(Double.NaN);
+        Double nan = Double.valueOf(Double.NaN);
         s.addInterpolatedColumn(VisualItem.X2, double.class);
         s.addInterpolatedColumn(VisualItem.Y2, double.class);
         
