@@ -197,7 +197,7 @@ public class TimeLib {
     public static Date getDate(Class type, long d) {
         try {
             Constructor c = type.getConstructor(new Class[] {long.class});
-            return (Date)c.newInstance(new Object[] {new Long(d)});
+            return (Date)c.newInstance(new Object[] {Long.valueOf(d)});
         } catch ( Exception e ) {
             e.printStackTrace();
             return null;
